securitygroups.tf
resource "aws_security_group" "anir-sg" {
  name        = "anir-sg"
  description = "Allow HTTP inbound traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name ="anir_sg"
  }
}
